* add tests for all wasm op codes * try to get wasm4 games to work